--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -41,6 +41,34 @@
   "profile.preferences": "Préférences",
   "profile.firstname": "Prénom",
   "profile.lastname": "Nom",
-  "profile.email": "Email"
-     
-  }
+  "profile.email": "Email",
+  "boat.type.sailboat": "Voilier",
+  "boat.type.motorboat": "Bateau à moteur",
+  "boat.type.catamaran": "Catamaran",
+  "boat.type.yacht": "Yacht",
+  "boat.type.other": "Autre",
+  "boat.category.luxury": "Luxe",
+  "boat.category.standard": "Standard",
+  "boat.category.budget": "Budget",
+  "booking.status.pending": "En attente",
+  "booking.status.confirmed": "Confirmée",
+  "booking.status.paid": "Payée",
+  "booking.status.active": "Active",
+  "booking.status.completed": "Terminée",
+  "booking.status.cancelled": "Annulée",
+  "booking.status.refunded": "Remboursée",
+  "payment.method.stripe": "Carte bancaire",
+  "payment.method.paypal": "PayPal",
+  "payment.method.bank_transfer": "Virement",
+  "payment.method.cash": "Espèces",
+  "damage.severity.minor": "Mineur",
+  "damage.severity.moderate": "Modéré",
+  "damage.severity.major": "Majeur",
+  "source.website": "Site web",
+  "source.mobile_app": "Application mobile",
+  "source.phone": "Téléphone",
+  "source.email": "Email",
+  "user.role.client": "Client",
+  "user.role.owner": "Propriétaire",
+  "user.role.admin": "Administrateur"
+}
