--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -17,6 +17,35 @@
   "results.subtitle": "Showing boats matching your search",
   "footer.legal": "Legal",
   "footer.services": "Services",
-  "footer.copyright": "&copy; 2024 SailingLoc. All rights reserved."
+  "footer.copyright": "&copy; 2024 SailingLoc. All rights reserved.",
+  "boat.type.sailboat": "Sailboat",
+  "boat.type.motorboat": "Motorboat",
+  "boat.type.catamaran": "Catamaran",
+  "boat.type.yacht": "Yacht",
+  "boat.type.other": "Other",
+  "boat.category.luxury": "Luxury",
+  "boat.category.standard": "Standard",
+  "boat.category.budget": "Budget",
+  "booking.status.pending": "Pending",
+  "booking.status.confirmed": "Confirmed",
+  "booking.status.paid": "Paid",
+  "booking.status.active": "Active",
+  "booking.status.completed": "Completed",
+  "booking.status.cancelled": "Cancelled",
+  "booking.status.refunded": "Refunded",
+  "payment.method.stripe": "Credit Card",
+  "payment.method.paypal": "PayPal",
+  "payment.method.bank_transfer": "Bank Transfer",
+  "payment.method.cash": "Cash",
+  "damage.severity.minor": "Minor",
+  "damage.severity.moderate": "Moderate",
+  "damage.severity.major": "Major",
+  "source.website": "Website",
+  "source.mobile_app": "Mobile App",
+  "source.phone": "Phone",
+  "source.email": "Email",
+  "user.role.client": "Client",
+  "user.role.owner": "Owner",
+  "user.role.admin": "Administrator"
 }
 
